Work - Cursor Pointer on Projs and Fix z-index Info and Image

--- a/app/sections/Work/projects.module.css
+++ b/app/sections/Work/projects.module.css
@@ -23,6 +23,7 @@ select.filter {
   display: flex;
   flex-direction: column;
   margin-bottom: 80px;
+  cursor: pointer;
 }
 
 .info {
@@ -103,10 +104,10 @@ select.filter {
     order: 0;
     margin-left: 0px;
     margin-right: -24px;
-    z-index: 1;
   }
 
   .project.reverse .proj_image {
     order: 1;
+    z-index: -1;
   }
 }
